--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
     "chart.js": "^4.4.6",
     "concurrently": "^9.0.1",
+    "firebase": "^11.0.2",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
