--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3.8'
 
 services:
-  react-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  frontend:
+    build: .
     ports:
-      - "80:80"
-    container_name: react-app-container
-    restart: unless-stopped
+      - "3000:3000"
+    volumes:
+      - .:/app
+    environment:
+      - NODE_ENV=development
+    command: npm start
